--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>instagram</title>
+
+    <!--Adding fontawesome because Lambda fucking forgot-->
+    <script src="https://use.fontawesome.com/e154f80c86.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
